2009-12-15  Noel O'Boyle

	* src/formats/smilesformat.cpp: Create OBPairData of "SMILES Atom
	Order" whenever creating a SMILES string (not just for canonical
	SMILES). Set to "local" so that it won't be written out to an SDF
	file.

2009-12-15  Chris Morley

	* include/openbabel/parsmart.h, src/parsmart.cpp: add support for
	$ as quadruple bond to SMARTS. (Already in SMILES.)
	
	* src/bond.cpp: reset OB_KTRIPLE_BOND, etc when changing bond order.
	Fixes corruption of isonitriles in #2913204

	* src/formats/fastsearchformat.cpp: adjust application of 
	ConvertDativeBonds() to fix #2913204

2009-12-14  Noel O'Boyle

	* src/GUI/OBGUI.cpp: Fix compilation on Linux.

2009-12-11  Chris Morley

	* include/openbabel/plugin.h, src/plugin.cpp: Make TypeID() virtual in
	base class. Move definitions of	BaseFindType and GetPlugin() to cpp file
	and make GetPlugin search all plugin types for an ID.
	 
	* tools/babel.cpp, tools/obabel.cpp: now get verbose description of any
	plugin with e.g. -L gen3D
	
	* src/GUI/OBGUI.cpp: above facility from the menu.	

2009-12-04  Chris Morley

	* src/formats/gaussformat.cpp: Rotational constants were sometimes
	being missed because of a warning message.

	* src/depict/depict.cpp, src/formats/svgformat.cpp: avaoid errors with
	molcules with one atom.


2009-11-28  Chris Morley

	* include/openbabel/depict/painter.h: add default #define of OBDEPICT
	
	* src/formats/fastsearchformat.cpp: correct declaration of AddPattern

2009-11-28  Chris Morley

	Avoid the OBPairData "OpenBabel Symmetry Classes" appearing
	as a property in sdf and cml output.  
	* include/openbabel/base.h(OBGenericData):add 'local' to enum DataOrigin
	* src/graphsym.cpp: SetOrigin "OpenBabel Symmetry Classes" to 'local'
	* src/formats/mdlformat.cpp, src/formats/xml/cmlformat.cpp:
	  Do not output 'local' OBPairData

2009-11-27  Chris Morley

	* src/formats/fastsearchformat.cpp: Give an estimate of the expected
	indexing time.